// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`format the given input if the input matches parser specified - CSS (stderr) 1`] = `""`;

exports[`format the given input if the input matches parser specified - CSS (stdout) 1`] = `
"Start writing your code snippet below
After finishing press ctrl+D to exit the read mode
.name {
  display: none;
}
Formatted code
"
`;

exports[`format the given input if the input matches parser specified - CSS (write) 1`] = `[]`;

exports[`format the given input if the input matches the file type - CSS (stderr) 1`] = `""`;

exports[`format the given input if the input matches the file type - CSS (stdout) 1`] = `
"Start writing your code snippet below
After finishing press ctrl+D to exit the read mode
.name {
  display: none;
}
Formatted code
"
`;

exports[`format the given input if the input matches the file type - CSS (write) 1`] = `[]`;

exports[`format the given input if the input matches the file type - JS (stderr) 1`] = `""`;

exports[`format the given input if the input matches the file type - JS (stdout) 1`] = `
"Start writing your code snippet below
After finishing press ctrl+D to exit the read mode
function hello() {
  return "world";
}
Formatted code
"
`;

exports[`format the given input if the input matches the file type - JS (write) 1`] = `[]`;

exports[`format the given input if the input matches the parser specified - JS (stderr) 1`] = `""`;

exports[`format the given input if the input matches the parser specified - JS (stdout) 1`] = `
"Start writing your code snippet below
After finishing press ctrl+D to exit the read mode
function hello() {
  return "world";
}
Formatted code
"
`;

exports[`format the given input if the input matches the parser specified - JS (write) 1`] = `[]`;

exports[`throw error if parser is not passed is not passed (stderr) 1`] = `
"[error] Cannot use --stdin without also passing --stdin-filepath or --parser
"
`;

exports[`throw error if parser is not passed is not passed (stdout) 1`] = `""`;

exports[`throw error if parser is not passed is not passed (write) 1`] = `[]`;

exports[`throw error if stdin-filepath is not passed (stderr) 1`] = `
"[error] Cannot use --stdin without also passing --stdin-filepath or --parser
"
`;

exports[`throw error if stdin-filepath is not passed (stdout) 1`] = `""`;

exports[`throw error if stdin-filepath is not passed (write) 1`] = `[]`;
